more UI tweaks & app/extension fixes

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -286,8 +286,8 @@
           title="{{'options'|i18n}}">
       </button>
       <div class="tip" id="options-btn-tip" ng-show="optionsTooltip">
-        <span ng-show="ui.splashPage && ui.instance">Show the contact again.</span>
-        <span ng-show="ui.splashPage && !ui.instance">Show the contact list.</span>
+        <span ng-show="ui.splashPage && ui.rosterNudge">Show the contact again.</span>
+        <span ng-show="ui.splashPage && !ui.rosterNudge">Show the contact list.</span>
         <span ng-hide="ui.splashPage">Show the setup page.</span>
       </div>
 
