--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -145,9 +145,10 @@
 
         <div id="contact-details" ng-show="ui.rosterNudge">
           <div class="contact-status">
-            <div class="contact-name">
-              <img class="contact-image" ng-src='{{ui.contact.imageData}}'>
-            </div>
+            <img ng-show="ui.contact.imageData" class="contact-image"
+                 ng-src='{{ui.contact.imageData?ui.contact.imageData:""}}'>
+            <img ng-hide="ui.contact.imageData" class="contact-image">
+
             <br>Network: {{ ui.contact.network }}
             <p ng-hide="ui.instance">
             {{ ui.contact.name }} is not running uProxy.
