Starting generic XMPP identity provider

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -134,6 +134,7 @@
             <span class="c-icons">
               <span class="c-icon" ng-show='contact.onGoogle'> G+ </span>
               <span class="c-icon" ng-show='contact.onFB'> FB </span>
+              <span class="c-icon" ng-show='contact.onXMPP'> XMPP </span>
               <span ng-show="contact.canUProxy">
                 <img class="c-icon" ng-show='contact.canUProxy' src='icons/uproxy-19.png'>
               </span>
