--- a/chrome/app/dialogs/manualidentity/manualdialog.html
+++ b/chrome/app/dialogs/manualidentity/manualdialog.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="thirdparty/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../../thirdparty/bootstrap.min.css" rel="stylesheet" media="screen">
     <!--script src='thirdparty/bootstrap.min.js'></script-->
     <script src='manualdialog.js'></script>
   </head>
