--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -151,11 +151,15 @@
             {{contact.name}}
             <img class="contact-image" ng-src='{{contact.imageData}}'>
             <span class="c-icons">
-              <span class="c-icon" ng-show='contact.onGoogle'> G+ </span>
-              <span class="c-icon" ng-show='contact.onFB'> FB </span>
-              <span ng-show="contact.canUProxy">
-                <img class="c-icon" ng-show='contact.canUProxy' src='icons/uproxy-19.png'>
-              </span>
+              <span class="c-icon givesMe"
+                  ng-class="{grey:'yes'!=contact.trust.asProxy}"
+                  ng-show='contact.givesMe'></span>
+              <span class="c-icon usesMe"
+                  ng-class="{grey:'yes'!=contact.trust.asClient}"
+                  ng-show='contact.usesMe'></span>
+              <span class="c-icon" ng-show='contact.onGoogle'>G+</span>
+              <span class="c-icon" ng-show='contact.onFB'>FB</span>
+              <span class="c-icon canUProxy" ng-show="contact.canUProxy"></span>
             </span>
             <span class="c-notification" ng-show='contact.hasNotification'> ! </span>
           </li>
