--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -188,31 +188,40 @@
                     ng-switch="ui.instance.trust.asProxy">
                   <div ng-switch-when="yes">
                     <button class="btn"
+                        ng-disabled="ui.pendingTrustChange"
                         ng-show="'off'==ui.instance.status.proxy"
                         ng-click="startAccess(ui.instance)">
                       Start
                     </button>
                     <div class="btn"
+                        ng-disabled="ui.pendingTrustChange"
                         ng-show="'ready'==ui.instance.status.proxy">
                       Setting up proxy...
                     </div>
                     <button class="btn"
                         ng-hide="'off'==ui.instance.status.proxy"
+                        ng-disabled="ui.pendingTrustChange"
                         ng-click="stopAccess(ui.instance)">
                       Stop
                     </button>
                   </div>
                   <div ng-switch-when="requested">
-                    <button class="btn" ng-click="cancelRequest(ui.instance)">
+                    <button class="btn"
+                        ng-disabled="ui.pendingTrustChange"
+                        ng-click="cancelRequest(ui.instance)">
                       Cancel
                     </button>
                     <span>Pending...</span>
                   </div>
                   <div ng-switch-when="offered">
-                    <button class="btn" ng-click="acceptOffer(ui.instance)">
+                    <button class="btn"
+                        ng-disabled="ui.pendingTrustChange"
+                        ng-click="acceptOffer(ui.instance)">
                       Accept Access
                     </button>
-                    <button class="btn" ng-click="declineOffer(ui.instance)">
+                    <button class="btn"
+                        ng-disabled="ui.pendingTrustChange"
+                        ng-click="declineOffer(ui.instance)">
                       No Thanks
                     </button>
                   </div>
@@ -227,18 +236,24 @@
                 <div class="box-for-client"
                     ng-switch="ui.instance.trust.asClient">
                   <button class="btn" ng-switch-when="no"
+                      ng-disabled="ui.pendingTrustChange"
                       ng-click="offerAccess(ui.instance)">
                     Offer Access
                   </button>
                   <div ng-switch-when="requested">
-                    <button class="btn" ng-click="grantAccess(ui.instance)">
+                    <button class="btn"
+                        ng-disabled="ui.pendingTrustChange"
+                        ng-click="grantAccess(ui.instance)">
                       Grant
                     </button>
-                    <button class="btn" ng-click="denyAccess(ui.instance)">
+                    <button class="btn"
+                        ng-disabled="ui.pendingTrustChange"
+                        ng-click="denyAccess(ui.instance)">
                       Ignore
                     </button>
                   </div>
                   <button class="btn" ng-switch-default
+                      ng-disabled="ui.pendingTrustChange"
                       ng-click="revokeAccess(ui.instance)">
                     Revoke Access
                   </button>
