--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -119,7 +119,7 @@
         </div>
 
         <div id="contact-header" ng-show="ui.rosterNudge">
-          <button class="btn-back" ng-click="ui.rosterNudge=false"></button>
+          <button class="btn-back" ng-click="ui.returnToRoster()"></button>
           <h1>{{ui.contact.name}}</h1>
         </div>
       </div>
