smoothed out the search bar css

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -73,7 +73,7 @@
 
     <div id="main-view" ng-hide="showingSplashPage()">
       <div id="header">
-        <div id="search-section" ng-hide="ui.rosterNudge">
+        <div id="roster-header" ng-hide="ui.rosterNudge">
           <div id="actions">
             <button id="search-btn" type="search"
                     ng-class="{on:ui.searchBar}"
