fix visibility of reset button in options page

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -145,7 +145,7 @@
 
     </details>
 
-    <div>
+    <div id="reset-box">
       <!-- TODO: make a proper controller for state reseting -->
       <button class="btn btn-warning btn-mini" ng-disabled="resetClicked"
         ng-click="resetClicked=true">
