--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -231,12 +231,12 @@
                 <button class="btn"
                     ng-disabled="ui.pendingProxyTrustChange"
                     ng-click="acceptOffer(ui.instance)">
-                  Accept Access
+                  Accept
                 </button>
                 <button class="btn"
                     ng-disabled="ui.pendingProxyTrustChange"
                     ng-click="declineOffer(ui.instance)">
-                  No Thanks
+                  Decline
                 </button>
               </div>
               <div ng-switch-default>
